# lt_make_torrent

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml  cmake-single-platform.yml  release.yml
src/: lt_make_torrent.cpp
